[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/egg/Lamp.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/lamp/lamp-cap-on.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/lights/light.png" type="Texture" id=3]
[ext_resource path="res://assets/objects/lamp/lamp-base.png" type="Texture" id=4]
[ext_resource path="res://assets/objects/lamp/lamp-off-3.png" type="Texture" id=5]
[ext_resource path="res://src/egg/ClickableTexture.gd" type="Script" id=6]
[ext_resource path="res://assets/objects/lamp/lamp-on-3.png" type="Texture" id=7]
[ext_resource path="res://assets/objects/lamp/lamp-neck-segment-1.png" type="Texture" id=8]
[ext_resource path="res://assets/objects/lamp/lamp-neck-segment-2.png" type="Texture" id=9]

[sub_resource type="OccluderPolygon2D" id=1]
cull_mode = 2
polygon = PoolVector2Array( 22.8496, 8.41986, 18.9236, 4.34727, 8.94355, 3.16431, 0.944892, 3.01781, -7.05377, 2.8713, -17.0887, 4.68784, -20.1432, 7.63239, -102.759, 95.1341, -57, 1, -6, -3, -4, -12, 4, -12, 6, -3, 66, -1, 108.26, 95.9987 )

[node name="Lamp" type="Node2D"]
script = ExtResource( 1 )
clickable_texture_path = NodePath("Cap")

[node name="Base" type="Sprite" parent="."]
z_index = -3
texture = ExtResource( 4 )

[node name="Cap" type="Sprite" parent="."]
position = Vector2( 0, -73 )
rotation = -0.0183143
z_index = 4
texture = ExtResource( 2 )

[node name="End" type="Position2D" parent="Cap"]
position = Vector2( 0.0915666, -4.99916 )
rotation = 0.0183143

[node name="LightOccluder2D" type="LightOccluder2D" parent="Cap"]
position = Vector2( -0.889953, -6.0173 )
occluder = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="Cap"]
position = Vector2( 0.0183133, -0.999832 )
rotation = -0.0010727
texture = ExtResource( 3 )
texture_scale = 0.15
color = Color( 0.945098, 0.831373, 0.317647, 0.615686 )
range_z_min = -6
range_z_max = 5
shadow_enabled = true

[node name="OffButton" type="Node2D" parent="."]
position = Vector2( 24, -8 )
z_index = -3
script = ExtResource( 6 )
clickable_texture_path = NodePath("Sprite")

[node name="Sprite" type="Sprite" parent="OffButton"]
texture = ExtResource( 5 )

[node name="OnButton" type="Node2D" parent="."]
visible = false
position = Vector2( -24, -8 )
z_index = -3
script = ExtResource( 6 )
clickable_texture_path = NodePath("Sprite")

[node name="Sprite" type="Sprite" parent="OnButton"]
texture = ExtResource( 7 )

[node name="Pivot" type="Position2D" parent="."]
position = Vector2( 0, -54 )

[node name="PivotTop" type="Sprite" parent="Pivot"]
position = Vector2( 0, -2 )
z_index = -2
texture = ExtResource( 8 )

[node name="PivotTop2" type="Sprite" parent="Pivot"]
position = Vector2( 0, 2 )
rotation = 3.14159
z_index = -2
texture = ExtResource( 8 )

[node name="Start" type="Position2D" parent="."]
position = Vector2( 0, -3 )

[node name="StartToPivot" type="Sprite" parent="."]
position = Vector2( 0, -5 )
z_index = -3
texture = ExtResource( 9 )

[node name="PivotToEnd" type="Sprite" parent="."]
position = Vector2( 0, -5 )
z_index = -3
texture = ExtResource( 9 )
